# Drone-Forensic

./: .gitignore  README.md  pyproject.toml  requirements.txt
blackbox/: README.md  bbox_decode.py  serial_i2cflash_dumper.py
blackbox/src/: bbox_decode.py
elrs/: README.md
elrs/src/: dump_elrs.py  elrs_do_rainbow.py  elrs_rainbow.py  elrs_uid.py
fc/: README.md
fc/samples/: sample_01.dump
fc/src/: beta_dump_config.py  beta_extract_flash.py  get_stm_uid.py  inav_dump_config.py  inav_extract_flash.py
fc/src/lib/: __init__.py  c_header_constants.py  flash_extract_common.py
fc/yara/: drones_ardupilot_firmwares.yara  drones_betaflight_firmwares.yara  drones_firmwares.yara  drones_inav_firmwares.yara  drones_operating.yara
misp/: drone_to_misp.py  misp_config.json.example
vtx/samples/: FC8885.db  dji_finfo.db
workshop/: README.md  drone_to_misp.ipynb
workshop/misp-uav-samples/: misp.event_drone_overing_remote.13293.json  misp.source_event_controller.68.json
workshop/solutions/: README.md
